# final-project-vineetrc

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/core/: ball.h  cue.h  engine.h
include/visualizer/: board.h  ideal_gas_app.h  pool_app.h
src/core/: ball.cc  engine.cc
src/visualizer/: board.cc  ideal_gas_app.cc  pool_app.cc
tests/: ball_physics_test.cc  board_test.cc  game_engine_test.cc
